--- a/demoHoliday/src/pages/oh/oh.scss
+++ b/demoHoliday/src/pages/oh/oh.scss
@@ -1,3 +1,13 @@
 page-oh {
+    .bg-image{
+        background-image: url('../assets/imgs/g1.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
+    /* ion-item {
+        background-color: #848484;
+    } */
+    
 
 }
